crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_svelte_template.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..435
  YAML_METADATA@0..20
    YAML_METADATA_DELIM@0..3 "---"
    NEWLINE@3..4 "\n"
    YAML_METADATA_CONTENT@4..16
      YAML_DOCUMENT@4..16
        YAML_BLOCK_MAP@4..16
          YAML_BLOCK_MAP_ENTRY@4..16
            YAML_BLOCK_MAP_KEY@4..10
              YAML_SCALAR@4..9
                YAML_SCALAR_TEXT@4..9 "title"
              YAML_COLON@9..10 ":"
            YAML_BLOCK_MAP_VALUE@10..16
              WHITESPACE@10..11 " "
              YAML_SCALAR@11..15
                YAML_SCALAR_TEXT@11..15 "Demo"
              NEWLINE@15..16 "\n"
    YAML_METADATA_DELIM@16..19 "---"
    NEWLINE@19..20 "\n"
  BLANK_LINE@20..21
    BLANK_LINE@20..21 "\n"
  HTML_BLOCK@21..57
    HTML_BLOCK_TAG@21..30
      TEXT@21..29 "<script>"
      NEWLINE@29..30 "\n"
    HTML_BLOCK_CONTENT@30..47
      TEXT@30..46 "  let count = 0;"
      NEWLINE@46..47 "\n"
    HTML_BLOCK_TAG@47..57
      TEXT@47..56 "</script>"
      NEWLINE@56..57 "\n"
  BLANK_LINE@57..58
    BLANK_LINE@57..58 "\n"
  PARAGRAPH@58..116
    TEXT@58..79 "Inline interpolation "
    SVELTE_EXPRESSION@79..86
      SVELTE_MARKER_OPEN@79..80 "{"
      SVELTE_CONTENT@80..85
        TEXT@80..85 "count"
      SVELTE_MARKER_CLOSE@85..86 "}"
    TEXT@86..103 " and a component "
    INLINE_HTML@103..114
      INLINE_HTML_CONTENT@103..114 "<Counter />"
    TEXT@114..115 "."
    NEWLINE@115..116 "\n"
  BLANK_LINE@116..117
    BLANK_LINE@116..117 "\n"
  PARAGRAPH@117..141
    SVELTE_BLOCK_LOGIC@117..140
      SVELTE_MARKER_OPEN@117..118 "{"
      SVELTE_CONTENT@118..139
        TEXT@118..139 "#each items  as  item"
      SVELTE_MARKER_CLOSE@139..140 "}"
    NEWLINE@140..141 "\n"
  BLANK_LINE@141..142
    BLANK_LINE@141..142 "\n"
  LIST@142..156
    LIST_ITEM@142..156
      LIST_MARKER@142..143 "-"
      WHITESPACE@143..144 " "
      PLAIN@144..156
        SVELTE_EXPRESSION@144..155
          SVELTE_MARKER_OPEN@144..145 "{"
          SVELTE_CONTENT@145..154
            TEXT@145..154 "item.name"
          SVELTE_MARKER_CLOSE@154..155 "}"
        NEWLINE@155..156 "\n"
  BLANK_LINE@156..157
    BLANK_LINE@156..157 "\n"
  PARAGRAPH@157..165
    SVELTE_BLOCK_LOGIC@157..164
      SVELTE_MARKER_OPEN@157..158 "{"
      SVELTE_CONTENT@158..163
        TEXT@158..163 "/each"
      SVELTE_MARKER_CLOSE@163..164 "}"
    NEWLINE@164..165 "\n"
  BLANK_LINE@165..166
    BLANK_LINE@165..166 "\n"
  PARAGRAPH@166..182
    SVELTE_BLOCK_LOGIC@166..181
      SVELTE_MARKER_OPEN@166..167 "{"
      SVELTE_CONTENT@167..180
        TEXT@167..180 "#if count > 0"
      SVELTE_MARKER_CLOSE@180..181 "}"
    NEWLINE@181..182 "\n"
  BLANK_LINE@182..183
    BLANK_LINE@182..183 "\n"
  PARAGRAPH@183..217
    TEXT@183..194 "Shown when "
    STRONG@194..203
      STRONG_MARKER@194..196 "**"
      TEXT@196..201 "count"
      STRONG_MARKER@201..203 "**"
    TEXT@203..216 " is positive."
    NEWLINE@216..217 "\n"
  BLANK_LINE@217..218
    BLANK_LINE@217..218 "\n"
  PARAGRAPH@218..226
    SVELTE_BLOCK_LOGIC@218..225
      SVELTE_MARKER_OPEN@218..219 "{"
      SVELTE_CONTENT@219..224
        TEXT@219..224 ":else"
      SVELTE_MARKER_CLOSE@224..225 "}"
    NEWLINE@225..226 "\n"
  BLANK_LINE@226..227
    BLANK_LINE@226..227 "\n"
  PARAGRAPH@227..235
    TEXT@227..234 "Hidden."
    NEWLINE@234..235 "\n"
  BLANK_LINE@235..236
    BLANK_LINE@235..236 "\n"
  PARAGRAPH@236..242
    SVELTE_BLOCK_LOGIC@236..241
      SVELTE_MARKER_OPEN@236..237 "{"
      SVELTE_CONTENT@237..240
        TEXT@237..240 "/if"
      SVELTE_MARKER_CLOSE@240..241 "}"
    NEWLINE@241..242 "\n"
  BLANK_LINE@242..243
    BLANK_LINE@242..243 "\n"
  PARAGRAPH@243..310
    TEXT@243..250 "A tag: "
    SVELTE_TAG@250..266
      SVELTE_MARKER_OPEN@250..251 "{"
      SVELTE_CONTENT@251..265
        TEXT@251..265 "@html rendered"
      SVELTE_MARKER_CLOSE@265..266 "}"
    TEXT@266..287 " and a nested object "
    SVELTE_EXPRESSION@287..297
      SVELTE_MARKER_OPEN@287..288 "{"
      SVELTE_CONTENT@288..296
        TEXT@288..296 "{ a: 1 }"
      SVELTE_MARKER_CLOSE@296..297 "}"
    TEXT@297..309 " expression."
    NEWLINE@309..310 "\n"
  BLANK_LINE@310..311
    BLANK_LINE@310..311 "\n"
  PARAGRAPH@311..348
    TEXT@311..347 "An unbalanced brace { ..."
    NEWLINE@347..348 "\n"
  BLANK_LINE@348..349
    BLANK_LINE@348..349 "\n"
  PARAGRAPH@349..393
    TEXT@349..392 "GFM tables work by de ..."
    NEWLINE@392..393 "\n"
  BLANK_LINE@393..394
    BLANK_LINE@393..394 "\n"
  PIPE_TABLE@394..435
    TABLE_HEADER@394..410
      TEXT@394..395 "|"
      WHITESPACE@395..396 " "
      TABLE_CELL@396..400
        TEXT@396..400 "like"
      WHITESPACE@400..401 " "
      TEXT@401..402 "|"
      WHITESPACE@402..403 " "
      TABLE_CELL@403..407
        TEXT@403..407 "this"
      WHITESPACE@407..408 " "
      TEXT@408..409 "|"
      NEWLINE@409..410 "\n"
    TABLE_SEPARATOR@410..418
      TABLE_SEP_DELIM@410..411 "|"
      TABLE_SEP_DASHES@411..413 "--"
      TABLE_SEP_DELIM@413..414 "|"
      TABLE_SEP_DASHES@414..416 "--"
      TABLE_SEP_DELIM@416..417 "|"
      NEWLINE@417..418 "\n"
    TABLE_ROW@418..435
      TEXT@418..419 "|"
      WHITESPACE@419..420 " "
      TABLE_CELL@420..425
        TEXT@420..425 "table"
      WHITESPACE@425..426 " "
      TEXT@426..427 "|"
      WHITESPACE@427..428 " "
      TABLE_CELL@428..432
        TEXT@428..432 "here"
      WHITESPACE@432..433 " "
      TEXT@433..434 "|"
      NEWLINE@434..435 "\n"
