crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_table_separator_tokens.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..310
  PIPE_TABLE@0..78
    TABLE_HEADER@0..26
      TEXT@0..1 "|"
      WHITESPACE@1..2 " "
      TABLE_CELL@2..6
        TEXT@2..6 "Left"
      WHITESPACE@6..7 " "
      TEXT@7..8 "|"
      WHITESPACE@8..9 " "
      TABLE_CELL@9..15
        TEXT@9..15 "Center"
      WHITESPACE@15..16 " "
      TEXT@16..17 "|"
      WHITESPACE@17..18 " "
      TABLE_CELL@18..23
        TEXT@18..23 "Right"
      WHITESPACE@23..24 " "
      TEXT@24..25 "|"
      NEWLINE@25..26 "\n"
    TABLE_SEPARATOR@26..52
      TABLE_SEP_DELIM@26..27 "|"
      TABLE_SEP_COLON@27..28 ":"
      TABLE_SEP_DASHES@28..33 "-----"
      TABLE_SEP_DELIM@33..34 "|"
      TABLE_SEP_COLON@34..35 ":"
      TABLE_SEP_DASHES@35..41 "------"
      TABLE_SEP_COLON@41..42 ":"
      TABLE_SEP_DELIM@42..43 "|"
      TABLE_SEP_DASHES@43..49 "------"
      TABLE_SEP_COLON@49..50 ":"
      TABLE_SEP_DELIM@50..51 "|"
      NEWLINE@51..52 "\n"
    TABLE_ROW@52..78
      TEXT@52..53 "|"
      WHITESPACE@53..54 " "
      TABLE_CELL@54..55
        TEXT@54..55 "a"
      WHITESPACE@55..59 "    "
      TEXT@59..60 "|"
      WHITESPACE@60..61 " "
      TABLE_CELL@61..62
        TEXT@61..62 "b"
      WHITESPACE@62..68 "      "
      TEXT@68..69 "|"
      WHITESPACE@69..70 " "
      TABLE_CELL@70..71
        TEXT@70..71 "c"
      WHITESPACE@71..76 "     "
      TEXT@76..77 "|"
      NEWLINE@77..78 "\n"
  BLANK_LINE@78..79
    BLANK_LINE@78..79 "\n"
  GRID_TABLE@79..224
    TABLE_SEPARATOR@79..108
      TABLE_SEP_DELIM@79..80 "+"
      TABLE_SEP_DASHES@80..88 "--------"
      TABLE_SEP_DELIM@88..89 "+"
      TABLE_SEP_COLON@89..90 ":"
      TABLE_SEP_DASHES@90..96 "------"
      TABLE_SEP_COLON@96..97 ":"
      TABLE_SEP_DELIM@97..98 "+"
      TABLE_SEP_DASHES@98..105 "-------"
      TABLE_SEP_COLON@105..106 ":"
      TABLE_SEP_DELIM@106..107 "+"
      NEWLINE@107..108 "\n"
    TABLE_HEADER@108..137
      TEXT@108..109 "|"
      WHITESPACE@109..110 " "
      TABLE_CELL@110..116
        TEXT@110..116 "Head 1"
      WHITESPACE@116..117 " "
      TEXT@117..118 "|"
      WHITESPACE@118..119 " "
      TABLE_CELL@119..125
        TEXT@119..125 "Head 2"
      WHITESPACE@125..126 " "
      TEXT@126..127 "|"
      WHITESPACE@127..128 " "
      TABLE_CELL@128..134
        TEXT@128..134 "Head 3"
      WHITESPACE@134..135 " "
      TEXT@135..136 "|"
      NEWLINE@136..137 "\n"
    TABLE_SEPARATOR@137..166
      TABLE_SEP_DELIM@137..138 "+"
      TABLE_SEP_EQUALS@138..146 "========"
      TABLE_SEP_DELIM@146..147 "+"
      TABLE_SEP_EQUALS@147..155 "========"
      TABLE_SEP_DELIM@155..156 "+"
      TABLE_SEP_EQUALS@156..164 "========"
      TABLE_SEP_DELIM@164..165 "+"
      NEWLINE@165..166 "\n"
    TABLE_ROW@166..195
      TEXT@166..167 "|"
      WHITESPACE@167..168 " "
      TABLE_CELL@168..169
        TEXT@168..169 "x"
      WHITESPACE@169..175 "      "
      TEXT@175..176 "|"
      WHITESPACE@176..177 " "
      TABLE_CELL@177..178
        TEXT@177..178 "y"
      WHITESPACE@178..184 "      "
      TEXT@184..185 "|"
      WHITESPACE@185..186 " "
      TABLE_CELL@186..187
        TEXT@186..187 "z"
      WHITESPACE@187..193 "      "
      TEXT@193..194 "|"
      NEWLINE@194..195 "\n"
    TABLE_SEPARATOR@195..224
      TABLE_SEP_DELIM@195..196 "+"
      TABLE_SEP_DASHES@196..204 "--------"
      TABLE_SEP_DELIM@204..205 "+"
      TABLE_SEP_DASHES@205..213 "--------"
      TABLE_SEP_DELIM@213..214 "+"
      TABLE_SEP_DASHES@214..222 "--------"
      TABLE_SEP_DELIM@222..223 "+"
      NEWLINE@223..224 "\n"
  BLANK_LINE@224..225
    BLANK_LINE@224..225 "\n"
  SIMPLE_TABLE@225..310
    TABLE_HEADER@225..253
      WHITESPACE@225..227 "  "
      TABLE_CELL@227..232
        TEXT@227..232 "Right"
      WHITESPACE@232..236 "    "
      TABLE_CELL@236..242
        TEXT@236..242 "Center"
      WHITESPACE@242..245 "   "
      TABLE_CELL@245..252
        TEXT@245..252 "Default"
      NEWLINE@252..253 "\n"
    TABLE_SEPARATOR@253..283
      TABLE_SEP_DASHES@253..260 "-------"
      TABLE_SEP_WHITESPACE@260..261 " "
      TABLE_SEP_DASHES@261..271 "----------"
      TABLE_SEP_WHITESPACE@271..272 " "
      TABLE_SEP_DASHES@272..282 "----------"
      NEWLINE@282..283 "\n"
    TABLE_ROW@283..310
      WHITESPACE@283..286 "   "
      TABLE_CELL@286..288
        TEXT@286..288 "12"
      WHITESPACE@288..295 "       "
      TABLE_CELL@295..301
        TEXT@295..301 "apples"
      WHITESPACE@301..308 "       "
      TABLE_CELL@308..309
        TEXT@308..309 "1"
      NEWLINE@309..310 "\n"
