crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_thematic_break_interrupts_paragraph_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..12
  PARAGRAPH@0..4
    TEXT@0..3 "Foo"
    NEWLINE@3..4 "\n"
  HORIZONTAL_RULE@4..8
    HORIZONTAL_RULE@4..7 "***"
    NEWLINE@7..8 "\n"
  PARAGRAPH@8..12
    TEXT@8..11 "bar"
    NEWLINE@11..12 "\n"
